<resources>
    <string name="app_name">Covid_19</string>
    <string name="ola">" Hello!"</string>
    <string name="bem">" Good"</string>
    <string name="como_est_sua_sa_de_nesse_momento">" How is your health at the moment?"</string>
    <string name="bem_mal">" Very bad"</string>
    <string name="dicas_para_refor_ar_o_seu_sistema_imunit_rio">" Tips to boost your immune system"</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="todo">TODO</string>
    <string name="degite_o_seu_peso_ex_85kg">Degite o seu peso. Ex: 85kg</string>
    <string name="degite_sua_alutara_ex_1_77">Degite sua alutara. Ex: 1.77</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="analizador_do_seu_sistema_imonologico">Analizador do seu sistema imonologico</string>
    <string name="title_activity_lista_artigo_cientifico" translatable="false">ListaArtigoCientifico</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="dicas_de_alimenta_o">Dicas de Alimentação</string>
    <string name="estilo_de_vida">Estilo de Vida</string>
    <string name="voltar">Voltar</string>
    <string name="mantenha_se_sa_davel">Mantenha-se saúdavel</string>
    <string name="acerca_de_covid_19">Acerca de COVID-19</string>
    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="textviewTitulo">textviewTitulo</string>
    <string name="textviewCategoria">textviewCategoria</string>
    <string name="lista_de_artigos_cientificos">Lista de Artigos Cientificos</string>
    <string name="buttonNovo">Novo</string>
    <string name="buttonAlterar">Alterar</string>
    <string name="categoria">Categoria</string>
    <string name="t_titulo">Título</string>
    <string name="action_settings">settings</string>

</resources>
